Add users, accounts handlers, README.md spec
